--- a/deploy/helm/templates/deployment.yaml
+++ b/deploy/helm/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
-            - mountPath: /uploads
+            - mountPath: /data/studio
               name: {{ .Chart.Name }}-fs
           ports:
             - containerPort: {{ .Values.service.internalHttpPort }}
@@ -44,7 +44,7 @@ spec:
             - name: ADDR
               value: 0.0.0.0:{{ .Values.service.internalHttpPort }}
             - name: DOWNLOAD_DIR
-              value: "/uploads/downloads"
+              value: "/data/studio/uploader"
             - name: USERS_RPC_ADDR
               valueFrom:
                 configMapKeyRef:
