Add url upload progress

--- a/deploy/helm/templates/deployment.yaml
+++ b/deploy/helm/templates/deployment.yaml
@@ -60,6 +60,11 @@ spec:
                 configMapKeyRef:
                   name: {{ .Chart.Name }}
                   key: splitterRpcAddr
+            - name: REDISURI
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Chart.Name }}
+                  key: redisUri
             - name: AUTH_TOKEN_SECRET
               valueFrom:
                 secretKeyRef:
