--- a/deploy/helm/templates/deployment.yaml
+++ b/deploy/helm/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
             - name: ADDR
               value: 0.0.0.0:{{ .Values.service.internalHttpPort }}
             - name: DOWNLOAD_DIR
-              value: "/data/studio/uploader"
+              value: "/data/studio/hls"
             - name: STREAMS_RPC_ADDR
               valueFrom:
                 configMapKeyRef:
