deploy: Change node pool and resources limit

--- a/deploy/helm/templates/deployment.yaml
+++ b/deploy/helm/templates/deployment.yaml
@@ -91,4 +91,4 @@ spec:
             claimName: {{ .Chart.Name }}-fs
             readOnly: false
       nodeSelector:
-        cloud.google.com/gke-nodepool: api
+        cloud.google.com/gke-nodepool: ingester
