--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -23,10 +23,4 @@ secrets:
   secret: ""
   sentryDsn: ""
 
-resources:
-  requests:
-    cpu: 500m
-    memory: 2Gi
-  limit:
-    cpu: 500m
-    memory: 2Gi
+resources: {}
